--- a/main.css
+++ b/main.css
@@ -103,25 +103,79 @@ hgroup,
 menu,
 nav,
 section {
-  display: flex;
+  display: block;
 }
 body {
   line-height: 1;
   font-family: Inter, sans-serif;
+  color: white;
+  font-size: 14px;
 }
 
 html {
-  background-color: black;
+  background-color: #141414;
 }
 
 .main-section {
-  max-width: 1200px;
+  margin: auto;
+  max-width: 1440px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #1f1f1f;
+  padding-bottom: 40px;
+  margin: 90px auto 50px auto;
+  border-radius: 10px;
+}
+
+img {
+  border-radius: 10px;
+  margin: 40px 200px 30px 200px;
+}
+
+.name {
+  font-size: larger;
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+
+.location {
+  color: hsl(75, 94%, 57%);
+  margin-bottom: 30px;
+}
+
+.tagline {
+  margin-bottom: 20px;
+}
+
+button {
+  background-color: hsl(0, 0%, 20%);
+  color: white;
+  border-radius: 10px;
+  width: 80%;
+  height: 40px;
+  border: none;
+  margin: 10px;
+}
+
+.social-link:hover {
+  background-color: hsl(75, 94%, 57%);
+  color: black;
+}
+
+.social-link:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 ol,
 ul {
   list-style: none;
