--- a/main.css
+++ b/main.css
@@ -113,7 +113,7 @@ body {
 }
 
 html {
-  background-color: #141414;
+  background-color: hsl(0, 0%, 8%);
 }
 
 .main-section {
@@ -130,7 +130,7 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #1f1f1f;
+  background-color: hsl(0, 0%, 12%);
   padding-bottom: 40px;
   margin: 90px auto 50px auto;
   border-radius: 10px;
