--- a/main.css
+++ b/main.css
@@ -156,7 +156,7 @@ img {
   margin-bottom: 20px;
 }
 
-button {
+.button {
   background-color: hsl(0, 0%, 20%);
   color: white;
   border-radius: 10px;
@@ -164,6 +164,9 @@ button {
   height: 40px;
   border: none;
   margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  padding-top: 22px;
 }
 
 .social-link:hover {
